# SIMD-ASSIGNMENT

./: .gitignore  README.md
mat_mul/: CMakeLists.txt  benchmark.cpp  main.cpp
transpose/: CMakeLists.txt  main.cpp
